<resources>
    <string name="app_name">musicaApiRetrofiti</string>
    <string name="input_nome_cantor_layout">Enter artist or band name</string>
    <string name="btn_buscar_album_layout">search album</string>
    <string name="label_artista_rv">Artist name:</string>
    <string name="nome_artista_rv">Joao</string>
    <string name="label_album_rv">Album:</string>
    <string name="nome_album_rv">Maria</string>
    <string name="label_numero_faixas_rv">Number of tracks:</string>
    <string name="numero_faixas_rv">10</string>
    <string name="imagem_description_rv">Artist\'s album cover</string>
    <string name="erro_result_not_found">Result not found</string>
    <string name="error_api_connection">Erro na conexão com a Api</string>
    <string name="link_vagalume">Visit the Vagalume website</string>
    <string name="vagalume_imagem_description">Vagalume brand logo. This site is providing the data for this project.</string>
</resources>